--- a/public/styles/auth.css
+++ b/public/styles/auth.css
@@ -1,23 +1,24 @@
-body{
+body.flex-column{
     width: 100%;
     min-height: 100vh;
     filter: grayscale(0.2);
     background-image: url('../res/images/backgroundblack.jpg');
     background-size: contain;
+    justify-content: center;
 }
 main{
     width: 100%;
-    position: relative;
 }
 .container{
     position: absolute;
     perspective: 1000px;
     width: 100%;
-    height: 0;
+    position: relative;
+    height: 32rem;
 }
 #card{
     width: min(95%, 20rem);
-    height: 32rem;
+    height: 100%;
     position: absolute;
     transform-style: preserve-3d;
     transition: all 0.75s ease 0s;
@@ -49,12 +50,7 @@ main{
     margin-top: 0.5rem;
     font-weight: 500;
 }
-#card .face .topleft{
-    justify-content: flex-start;
-}
-#card .face .bottomright{
-    justify-content: flex-end;
-}
+
 #card .face .bottomright img{
     transform: rotateZ(180deg);
 }
