--- a/public/styles/root.css
+++ b/public/styles/root.css
@@ -1,11 +1,14 @@
 :root{
-    --white: rgb(250,250,250);
-    --lightgray: rgba(220,220,220);
-    --gray:rgb(125,125,125);
-    --darkgray: #323232;
+    --white: #fafafa;
+    --lightgray: #dcdcdc;
+    --gray:#303030;
+    --darkgray: #242424;
     --black: #1e1e1e;
-    --red: rgb(212, 35, 35);
+    --red: #ce1b1b;
+    --darkred: #a01a1a;
+    --lightred: rgb(245, 58, 58);
     --blue: rgb(40, 40, 160);
+    --green: rgb(32, 122, 32);
 }
 
 *{
@@ -14,6 +17,10 @@
     color: inherit;
     font-family: 'Exo';
     box-sizing: border-box;
+    font-weight: inherit;
+}
+html{
+    font-size: 1rem;
     font-weight: 400;
 }
 button{
@@ -23,26 +30,41 @@ button{
     border: none;
     cursor: pointer;
 }
-html{
-    font-size: 1rem;
-}
 .flex-row{
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
     align-items: center;
+    flex-wrap: wrap;
 }
-
 .flex-column{
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
 }
-
 .w100{
     width: 100%;
 }
+.h100{
+    height: 100%;
+}
+.topleft{
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    width: 100%;
+}
+.bottomright{
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    width: 100%;
+}
+.bottomright .suit{
+    transform: rotate(180deg);
+}
+
 
 @font-face{
     font-family: 'Exo';
