--- a/views/auth.ejs
+++ b/views/auth.ejs
@@ -13,9 +13,6 @@
 </head>
 
 <body class="flex-column">
-    <header>
-
-    </header>
     <main class="flex-column">
         <div class="container flex-column">
             <div id="card" face="login" class="flex-row">
@@ -29,8 +26,8 @@
                         <h2 class="title">Românească</h2>
                     </div>
                     <form id="login-form" action="/login" method="post">
-                        <input type="email" name="email" placeholder="Email">
-                        <input type="password" name="password" placeholder="Password">
+                        <input type="email" name="email" placeholder="Email" required>
+                        <input type="password" name="password" placeholder="Password" required>
                         <p id="login-error" class="error"></p>
                         <button type="submit" class="submit">Login</button>
                     </form>
@@ -53,9 +50,9 @@
                     </div>
 
                     <form id="register-form" action="/register" method="post" autocomplete="off">
-                        <input type="email" name="email" placeholder="Email">
-                        <input type="text" name="username" placeholder="Username">
-                        <input type="password" name="password" placeholder="Password">
+                        <input type="email" name="email" placeholder="Email" required>
+                        <input type="text" name="username" placeholder="Username" required>
+                        <input type="password" name="password" placeholder="Password" required>
                         <p id="register-error" class="error"></p>
                         <button type="submit" class="submit">Register</button>
                     </form>
@@ -71,8 +68,5 @@
             </div>
         </div>
     </main>
-    <footer>
-
-    </footer>
 </body>
 </html>
