--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -21,7 +21,7 @@
             <h2 class="subtitle">Update your preferences</h2>
             <div class="flex-row w100 user">
                 <div class="avatar">
-                    <img src="../public/res/images/person.svg" alt="">
+                    <img src="../public/data/avatars/<%=user.avatar%>" alt="">
                 </div>
                 <div class="flex-column text">
                     <label>Change username</label>
