--- a/public/styles/profile.css
+++ b/public/styles/profile.css
@@ -28,6 +28,9 @@ main{
 }
 .profile .user .avatar img{
     width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
 }
 .profile .user .text{
     flex-grow: 100;
