--- a/views/main.ejs
+++ b/views/main.ejs
@@ -15,10 +15,10 @@
     <main>
         <section class="game-list flex-row">
             <div class="game-box flex-row">
-                <%- include('partials/deck', {game: 'romaneasca', suit: 'heart', color:'lightred'})%>
+                <%- include('partials/deck', {game: 'romaneasca', suit: 'heart', color:'mainl'})%>
             </div>
             <div class="game-box flex-row">
-                <%- include('partials/deck', {game: 'septica', suit: 'diamond', color:'lightred'})%>
+                <%- include('partials/deck', {game: 'septica', suit: 'diamond', color:'mainl'})%>
             </div>
             <div class="game-box flex-row">
                 <%- include('partials/deck', {game: 'blackjack', suit: 'spade', color:'gray'})%>
