--- a/views/romaneasca.ejs
+++ b/views/romaneasca.ejs
@@ -11,6 +11,7 @@
     <script src="../../public/scripts/romaneasca.js"></script>
 </head>
 <body class="flex-column">
-    <%-include('../partials/header'), user%>
+    <%-include('partials/header.ejs', {user})%>
+    
 </body>
 </html>
