--- a/public/styles/lobby.css
+++ b/public/styles/lobby.css
@@ -1,9 +1,9 @@
 body{
-    background-color: var(--gray);
+    background-color: var(--black);
 }
 main{
     width: 100%;
-    padding: 2rem 1rem;
+    padding: 2rem 0;
 }
 
 .title{
@@ -25,7 +25,7 @@ main{
 
 .box{
     padding: 1rem;
-    background-color: var(--darkgray);
+    background-color: var(--dark);
     border-radius: 0.2rem;
 }
 .box .header{
@@ -45,38 +45,42 @@ main{
     outline: none;
     border: none;
     flex-grow: 1;
-    margin-right: 1rem;
-    border-radius: 0.25rem;
+    margin: 0 1rem;
     -webkit-appearance: none;
     -moz-appearance: none;
     background-color: transparent;
-    border: solid 0.1rem var(--gray);
+    border: none;
+    border-bottom: solid 0.1rem var(--gray);
 }
 .box form button{
     font-size: 1.25rem;
     border-radius: 0.25rem;
     width: 6rem;
-    padding: 0.75rem;
+    margin: 1rem 0;
+    padding: 0.5rem;
     color: var(--white);
-    background-color: var(--green);
+    background-color: var(--second);
+}
+.create-and-join{
+    align-items: stretch;
 }
 .create-room{
     aspect-ratio: 5/3;
     flex-grow: 1;
     flex-basis: 0;
-    margin-right: 1rem;
+    margin: 1rem;
 }
 
 .join-room{
     aspect-ratio: 5/3;
     flex-grow: 1;
     flex-basis: 0;
-    margin-left: 1rem;
+    margin: 1rem;
 }
 
 .room-list{
-    margin-top: 2rem;
-    width: 100%;
+    margin: 1rem;
+    align-self: stretch;
 }
 .room-list .header{
     margin-bottom: 2rem;
@@ -100,19 +104,19 @@ main{
     overflow: hidden;
 }
 .room .name{
-    flex-grow: 3;
+    flex-grow: 10;
 }
 .room .owner{
-    flex-grow: 2;
+    flex-grow: 8;
 }
 .room .player-count{
-    flex-grow: 1;
+    flex-grow: 5;
 }
 .room .join{
-    flex-grow: 1;
+    flex-grow: 5;
 }
 .room .join > button{
-    background-color: var(--green);
+    background-color: var(--second);
     font-size: 1rem;
     border-radius: 0.25rem;
     width: 100%;
