--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1,6 +1,6 @@
 body.flex-column{
     /* background-image: linear-gradient(135deg, var(--darkgray), var(--black)); */
-    background-color: var(--gray);
+    background-color: var(--black);
     background-size: contain;
     min-height: 100vh;
     justify-content: flex-start;
@@ -61,7 +61,7 @@ main{
     font-size: 1.25rem;
     width: 90%;
     border-radius: 0.25rem;
-    background-color: var(--lightred);
+    background-color: var(--mainl);
     color: var(--white);
     padding: 0.5rem;
     font-weight: 400;
@@ -72,7 +72,7 @@ main{
     font-size: 1.25rem;
     width: 100%;
     border-radius: 0.25rem;
-    background-color: var(--lightred);
+    background-color: var(--mainl);
     color: var(--white);
     padding: 0.5rem;
     font-weight: 400;
