--- a/views/romaneasca.ejs
+++ b/views/romaneasca.ejs
@@ -8,10 +8,10 @@
     <link rel="shortcut icon" href="../../public/res/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="../../public/styles/root.css">
     <link rel="stylesheet" href="../../public/styles/romaneasca.css">
-    <script src="../../public/scripts/romaneasca.js"></script>
+    <script src="/socket.io/socket.io.js" defer></script>
+    <script src="../../public/scripts/romaneasca.js" defer></script>
 </head>
 <body class="flex-column">
     <%-include('partials/header.ejs', {user})%>
-    
 </body>
 </html>
