--- a/views/romaneasca.ejs
+++ b/views/romaneasca.ejs
@@ -13,5 +13,9 @@
 </head>
 <body class="flex-column">
     <%-include('partials/header.ejs', {user})%>
+    <%-include('partials/room-overlay.ejs', {user})%>
+    <main>
+        
+    </main>
 </body>
 </html>
