--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -39,6 +39,7 @@ main{
     background-color: var(--white);
     color: var(--black);
     transition: all 0.4s ease;
+    justify-content: space-between;
 }
 .game-box .top{
     position: absolute;
