--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,16 +1,17 @@
 <header class="flex-row w100">
     <style>
         header.flex-row {
-            padding: 0.5rem 2rem;
+            padding: 0.5rem 1rem;
             background-color: var(--dark);
             justify-content: space-between;
             color: var(--white);
             position: sticky;
             top: 0;
             z-index: 10;
+            border-bottom: solid 0.1rem var(--black);
         }
         header .home img{
-            height: 2rem;
+            height: 1.75rem;
             color: var(--light);
             transition: all 0.3s ease;
         }
