--- a/public/styles/auth.css
+++ b/public/styles/auth.css
@@ -3,6 +3,7 @@ body.flex-column{
     min-height: 100vh;
     filter: grayscale(0.2);
     background-image: url('../res/images/backgroundblack.jpg');
+    /* background-color: var(--gray); */
     background-size: contain;
     justify-content: center;
 }
@@ -31,8 +32,9 @@ main{
     padding: 1rem;
     backface-visibility: hidden;
     justify-content: space-between;
-    background: linear-gradient(145deg, rgba(255,255,255,1) 0%, rgba(214,214,214,1) 100%);
-    box-shadow: 0 0 1rem 0.1rem var(--dark);
+    /* background: linear-gradient(145deg, rgba(255,255,255,1) 0%, rgba(214,214,214,1) 100%);
+    box-shadow: 0 0 1rem 0.1rem var(--dark); */
+    background-color: var(--white);
     border-radius: 1rem;
 }
 #card .face.register{
