--- a/views/partials/room-overlay.ejs
+++ b/views/partials/room-overlay.ejs
@@ -2,7 +2,7 @@
     #waiting-screen {
         background-color: var(--black);
         position: absolute;
-        z-index: 3;
+        z-index: 12;
         top: 4rem;
         min-height: calc(100vh - 4rem);
         width: 100%;
@@ -44,7 +44,7 @@
     }
 
     #waiting-screen .choose-team {
-        width: min(50rem, 98%);
+        width: min(40rem, 98%);
         padding: 0.5rem;
         border-radius: 1rem;
     }
@@ -59,7 +59,7 @@
         transition: all 0.2s ease;
         background-color: var(--dark);
         border: solid 0.4rem transparent; 
-        min-height: 25rem;
+        min-height: 20rem;
     }
     #waiting-screen .choose-team .team:hover{
         background-color: var(--gray);
@@ -81,7 +81,7 @@
         height: 100%;
     }
     #waiting-screen .choose-team .team .name{
-        font-size: 1.75rem;
+        font-size: 1.5rem;
         margin-bottom: 2rem;
     }
     #waiting-screen .choose-team .team .members{
@@ -96,22 +96,15 @@
         width: 3rem;
         margin-right: 0.5rem;
     }
+    #waiting-screen .lobby.chat{
+        align-self: flex-start;
+        margin-left: 1rem;
+        position: fixed;
+        bottom: 1rem;
+    }
 </style>
 <div id="waiting-screen" class="flex-column w100" code="<%=game.code%>">
-    <div class="players flex-row">
-        <div class="player flex-row">
-            <div class="image"><img src="../../public/data/avatars/default_avatar.svg" alt=""></div>
-            <div class="username">Dorin</div>
-        </div>
-        <div class="player flex-row">
-            <div class="image"><img src="../../public/data/avatars/default_avatar.svg" alt=""></div>
-            <div class="username">Dorin</div>
-        </div>
-        <div class="player flex-row">
-            <div class="image"><img src="../../public/data/avatars/default_avatar.svg" alt=""></div>
-            <div class="username">Dorin</div>
-        </div>
-    </div>
+    <div class="players flex-row">There are no players?</div>
     <h2 class="title">Choose a team</h2>
     <div class="choose-team flex-row">
         <div class="team 1 flex-column" team="1" onclick="chooseTeam(2)">
@@ -145,6 +138,22 @@
             </div>
         </div>
     </div>
+    
+    <div class="chat lobby flex-column">
+        <div class="messages  flex-column">
+            <div class="message flex-row">
+                <div class="user">Dorin</div>
+                <div class="text">Salut</div>
+            </div>
+            <div class="message flex-row">
+                <div class="user">Dorin</div>
+                <div class="text">Lorem, ipsum dolor.</div>
+            </div>
+        </div>
+        <form method="dialog" id="lobbyChatForm" class="flex-row">
+            <input type="text">
+            <button  class="send image"><img src="/public/res/UI/send.svg" alt=""></button>
+        </form>
+    </div>
 
 </div>
-<script src="../../public/scripts/partials/room-overlay.ejs" defer></script>
