--- a/views/romaneasca.ejs
+++ b/views/romaneasca.ejs
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,11 +12,128 @@
     <script src="/socket.io/socket.io.js" defer></script>
     <script src="../../public/scripts/romaneasca.js" defer></script>
 </head>
+
 <body class="flex-column">
+    <data id="data" code="<%=game.code%>" class="hidden"></data>
     <%-include('partials/header.ejs', {user})%>
     <%-include('partials/room-overlay.ejs', {user})%>
-    <main>
-        
-    </main>
+    <main class="flex-column ">
+        <section class="top flex-row">
+            <div class="code flex-row"><span>Code:</span> <span><%=game.code%></span></div>
+            <div class="timer flex-row">
+                <div class="round">Round 5</div>
+                <div class="bar flex-row">
+                    <div class="seconds">15</div>
+                    <div class="progress"></div>
+                </div>
+            </div>
+            <div class="score flex-column">
+                <div class="team 1 flex-row">
+                    <div class="image"><img src="/public/res/images/diamond.svg" alt=""></div>
+                    <div class="value">3</div>
+                </div>
+                <div class="team 2 flex-row">
+                    <div class="image"><img src="/public/res/images/club.svg" alt=""></div>
+                    <div class="value">5</div>
+                </div>
+            </div>
+        </section>
+        <section class="center flex-row w100">
+            <aside class="left">
+                <div class="player flex-row">
+                    <div class="image profile-picture"><img src="../../public/data/avatars/default_avatar.svg" alt=""></div>
+                    <div class="username">Nicu blaj</div>
+                    <div class="image team-logo"><img src="../../public/res/images/diamond.svg" alt=""></div>
+                </div>
+                <div class="player flex-row">
+                    <div class="image profile-picture"><img src="../../public/data/avatars/default_avatar.svg" alt=""></div>
+                    <div class="username">Dorin HErmes costello</div>
+                    <div class="image team-logo"><img src="../../public/res/images/club.svg" alt=""></div>
+                </div>
+            </aside>
+            <div class="table flex-row">
+                <div class="cards flex-row">
+                    <div class="card-slot flex-row">
+                        <div class="card"><img src="../../public/res/cards/10S.png" alt=""></div>
+                    </div>
+                    <div class="card-slot flex-row">
+                        <div class="card"><img src="../../public/res/cards/AD.png" alt=""></div>
+                    </div>
+                    <div class="card-slot flex-row">
+                        <div class="card"><img src="../../public/res/cards/10H.png" alt=""></div>
+                    </div>
+                    <div class="card-slot flex-row">
+                        <div class="card"><img src="../../public/res/cards/10C.png" alt=""></div>
+                    </div>
+                    <div class="card-slot flex-row">
+                        <div class="card"><img src="../../public/res/cards/10H.png" alt=""></div>
+                    </div>
+                    <div class="card-slot flex-row">
+                        <div class="card"><img src="../../public/res/cards/8H.png" alt=""></div>
+                    </div>
+                    <div class="card-slot flex-row">
+                        <div class="card"><img src="../../public/res/cards/10C.png" alt=""></div>
+                    </div>
+                    <div class="card-slot flex-row">
+                        <div class="card"><img src="../../public/res/cards/2C.png" alt=""></div>
+                    </div>
+                    <div class="card-slot flex-row">
+                        <div class="card"><img src="../../public/res/cards/10S.png" alt=""></div>
+                    </div>
+                    <div class="card-slot flex-row">
+                        <div class="card"><img src="../../public/res/cards/7C.png" alt=""></div>
+                    </div>
+                    <div class="card-slot flex-row">
+                        <div class="card"><img src="../../public/res/cards/10S.png" alt=""></div>
+                    </div>
+                    
+
+                </div>
+            </div>
+            <aside class="right">
+                <div class="player flex-row">
+                    <div class="image profile-picture"><img src="../../public/data/avatars/default_avatar.svg" alt=""></div>
+                    <div class="username">Dorin</div>
+                    <div class="image team-logo"><img src="../../public/res/images/club.svg" alt=""></div>
+                </div>
+                <div class="player flex-row">
+                    <div class="image profile-picture"><img src="../../public/data/avatars/default_avatar.svg" alt=""></div>
+                    <div class="username">Dorin</div>
+                    <div class="image team-logo"><img src="../../public/res/images/diamond.svg" alt=""></div>
+                </div>
+            </aside>
+        </section>
+        <section class="bottom flex-row">
+            <div class="chat game-room flex-column">
+                <div class="messages  flex-column">
+                    <div class="message flex-row">
+                        <div class="user">Dorin</div>
+                        <div class="text">Salut</div>
+                    </div>
+                    <div class="message flex-row">
+                        <div class="user">Dorin</div>
+                        <div class="text">Lorem, ipsum dolor.</div>
+                    </div>
+                </div>
+                <form method="dialog" id="gameChatForm" class="flex-row">
+                    <input type="text">
+                    <button  class="send image"><img src="/public/res/UI/send.svg" alt=""></button>
+                </form>
+            </div>
+
+            <div class="hand flex-row">
+                <div class="card-slot flex-row"> <div class="card"><img src="/public/res/cards/7C.png" alt=""></div></div>
+                <div class="card-slot flex-row"> <div class="card"><img src="/public/res/cards/AH.png" alt=""></div></div>
+                <div class="card-slot flex-row"> <div class="card"><img src="/public/res/cards/JD.png" alt=""></div></div>
+                <div class="card-slot flex-row"> <div class="card"><img src="/public/res/cards/10C.png" alt=""></div></div>
+            </div>
+            <div class="give-up flex-column glowing">
+                <div class="topleft icon"><img src="/public/res/images/surrender.svg" alt=""></div>
+                <div class="text">Give up</div>
+                <div class="bottomright icon"><img src="/public/res/images/surrender.svg" alt=""></div>
+            </div>
+        </section>
+        </main>
 </body>
+
 </html>
