--- a/public/styles/profile.css
+++ b/public/styles/profile.css
@@ -77,7 +77,7 @@ label{
 .submit button{
     padding: 0.75rem;
     font-size: 1.1rem;
-    background-color: var(--good);
+    background-color: var(--second);
     border-radius: 0.25rem;
 }
 
