--- a/views/romaneasca.ejs
+++ b/views/romaneasca.ejs
@@ -16,7 +16,38 @@
 <body class="flex-column">
     <data id="data" code="<%=game.code%>" class="hidden"></data>
     <%-include('partials/header.ejs', {user})%>
-    <%-include('partials/room-overlay.ejs', {user})%>
+
+    <div id="waiting-screen" class="flex-column w100" code="<%=game.code%>">
+        <div class="players flex-row">If you see this message you should refresh/rejoin!</div>
+        <h2 class="title">Choose a team</h2>
+        <div class="choose-team flex-row">
+            <div class="team 0 flex-column" team="0" onclick="chooseTeam(0)">
+                <div class="logo"><img src="../../public/res/images/diamond.svg" alt=""></div>
+                <div class="name">The DIAMONDS</div>
+                <div class="members flex-column"></div>
+            </div>
+            <div class="team 1 flex-column" team="1" onclick="chooseTeam(1)">
+                <div class="logo"><img src="../../public/res/images/club.svg" alt=""></div>
+                <div class="name">The CLUBS</div>
+                <div class="members flex-column"></div>
+            </div>
+        </div>
+        <div class="ready flex-row">
+            <div class="ready-count">Players ready: 0/4</div>
+            <div class="starting-in">Waiting for players</div>
+        </div>
+        
+        <div class="chat lobby flex-column">
+            <div class="messages  flex-column">
+                
+            </div>
+            <form method="dialog" id="lobbyChatForm" onsubmit="sendLobbyChat()" class="flex-row" autocomplete="off">
+                <input type="text" name="message">
+                <button  class="send image"><img src="../../public/res/UI/send.svg" alt=""></button>
+            </form>
+        </div>
+    
+    </div>
     <main class="flex-column ">
         <section class="top flex-row">
             <div class="code flex-row"><span>Code:</span> <span><%=game.code%></span></div>
@@ -29,23 +60,23 @@
             </div>
             <div class="score flex-column">
                 <div class="team 1 flex-row">
-                    <div class="image"><img src="/public/res/images/diamond.svg" alt=""></div>
+                    <div class="image"><img src="../../public/res/images/diamond.svg" alt=""></div>
                     <div class="value">3</div>
                 </div>
                 <div class="team 2 flex-row">
-                    <div class="image"><img src="/public/res/images/club.svg" alt=""></div>
+                    <div class="image"><img src="../../public/res/images/club.svg" alt=""></div>
                     <div class="value">5</div>
                 </div>
             </div>
         </section>
         <section class="center flex-row w100">
             <aside class="left">
-                <div class="player flex-row">
+                <div class="player flex-row" team='0' member='0'>
                     <div class="image profile-picture"><img src="../../public/data/avatars/default_avatar.svg" alt=""></div>
                     <div class="username">Nicu blaj</div>
                     <div class="image team-logo"><img src="../../public/res/images/diamond.svg" alt=""></div>
                 </div>
-                <div class="player flex-row">
+                <div class="player flex-row" team='1' member='1'>
                     <div class="image profile-picture"><img src="../../public/data/avatars/default_avatar.svg" alt=""></div>
                     <div class="username">Dorin HErmes costello</div>
                     <div class="image team-logo"><img src="../../public/res/images/club.svg" alt=""></div>
@@ -54,49 +85,29 @@
             <div class="table flex-row">
                 <div class="cards flex-row">
                     <div class="card-slot flex-row">
-                        <div class="card"><img src="../../public/res/cards/10S.png" alt=""></div>
+                        <div class="card"><img src="../../public/res/cards/S10.png" alt=""></div>
                     </div>
                     <div class="card-slot flex-row">
-                        <div class="card"><img src="../../public/res/cards/AD.png" alt=""></div>
+                        <div class="card"><img src="../../public/res/cards/S10.png" alt=""></div>
                     </div>
                     <div class="card-slot flex-row">
-                        <div class="card"><img src="../../public/res/cards/10H.png" alt=""></div>
+                        <div class="card"><img src="../../public/res/cards/S10.png" alt=""></div>
                     </div>
                     <div class="card-slot flex-row">
-                        <div class="card"><img src="../../public/res/cards/10C.png" alt=""></div>
+                        <div class="card"><img src="../../public/res/cards/S10.png" alt=""></div>
                     </div>
                     <div class="card-slot flex-row">
-                        <div class="card"><img src="../../public/res/cards/10H.png" alt=""></div>
+                        <div class="card"><img src="../../public/res/cards/S10.png" alt=""></div>
                     </div>
-                    <div class="card-slot flex-row">
-                        <div class="card"><img src="../../public/res/cards/8H.png" alt=""></div>
-                    </div>
-                    <div class="card-slot flex-row">
-                        <div class="card"><img src="../../public/res/cards/10C.png" alt=""></div>
-                    </div>
-                    <div class="card-slot flex-row">
-                        <div class="card"><img src="../../public/res/cards/2C.png" alt=""></div>
-                    </div>
-                    <div class="card-slot flex-row">
-                        <div class="card"><img src="../../public/res/cards/10S.png" alt=""></div>
-                    </div>
-                    <div class="card-slot flex-row">
-                        <div class="card"><img src="../../public/res/cards/7C.png" alt=""></div>
-                    </div>
-                    <div class="card-slot flex-row">
-                        <div class="card"><img src="../../public/res/cards/10S.png" alt=""></div>
-                    </div>
-                    
-
                 </div>
             </div>
             <aside class="right">
-                <div class="player flex-row">
+                <div class="player flex-row"  team='1' member='0'>
                     <div class="image profile-picture"><img src="../../public/data/avatars/default_avatar.svg" alt=""></div>
                     <div class="username">Dorin</div>
                     <div class="image team-logo"><img src="../../public/res/images/club.svg" alt=""></div>
                 </div>
-                <div class="player flex-row">
+                <div class="player flex-row"  team='0' member='1'>
                     <div class="image profile-picture"><img src="../../public/data/avatars/default_avatar.svg" alt=""></div>
                     <div class="username">Dorin</div>
                     <div class="image team-logo"><img src="../../public/res/images/diamond.svg" alt=""></div>
@@ -117,20 +128,18 @@
                 </div>
                 <form method="dialog" id="gameChatForm" class="flex-row">
                     <input type="text">
-                    <button  class="send image"><img src="/public/res/UI/send.svg" alt=""></button>
+                    <button  class="send image"><img src="../../public/res/UI/send.svg" alt=""></button>
                 </form>
             </div>
 
             <div class="hand flex-row">
-                <div class="card-slot flex-row"> <div class="card"><img src="/public/res/cards/7C.png" alt=""></div></div>
-                <div class="card-slot flex-row"> <div class="card"><img src="/public/res/cards/AH.png" alt=""></div></div>
-                <div class="card-slot flex-row"> <div class="card"><img src="/public/res/cards/JD.png" alt=""></div></div>
-                <div class="card-slot flex-row"> <div class="card"><img src="/public/res/cards/10C.png" alt=""></div></div>
+                <div class="card-slot flex-row"> <div class="card"><img src="../../public/res/cards/DJ.png" alt=""></div></div>
+                <div class="card-slot flex-row"> <div class="card"><img src="../../public/res/cards/C10.png" alt=""></div></div>
             </div>
             <div class="give-up flex-column glowing">
-                <div class="topleft icon"><img src="/public/res/images/surrender.svg" alt=""></div>
+                <div class="topleft icon"><img src="../../public/res/images/surrender.svg" alt=""></div>
                 <div class="text">Give up</div>
-                <div class="bottomright icon"><img src="/public/res/images/surrender.svg" alt=""></div>
+                <div class="bottomright icon"><img src="../../public/res/images/surrender.svg" alt=""></div>
             </div>
         </section>
         </main>
